reconfiguring header to the correct ctp file, fixing overlap on header, adding footer :)

--- a/app/webroot/css/cake.generic.css
+++ b/app/webroot/css/cake.generic.css
@@ -75,6 +75,7 @@ p {
 
 #header{
 	padding: 10px 20px;
+	overflow: hidden;
 }
 #header h1 {
 	line-height:20px;
@@ -100,10 +101,17 @@ p {
 	padding: 10px 20px 40px 20px;
 	overflow: auto;
 }
-#footer {
-	clear: both;
-	padding: 6px 10px;
-	text-align: right;
+
+/* Footer
+-------------------------------------------------- */
+.footer {
+  margin-top: 45px;
+  padding: 35px 0 36px;
+  border-top: 1px solid #e5e5e5;
+}
+.footer p {
+  margin-bottom: 0;
+  color: #555;
 }
 
 /** containers **/
@@ -4047,6 +4055,7 @@ a.thumbnail:hover {
   color: #ffffff;
 }
 .hero-unit {
+  clear: both;
   padding: 60px;
   margin-bottom: 30px;
   background-color: #f5f5f5;
